# covid19python

./: .gitattributes  .gitignore  BACKLOG.md  CHANGES.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  TOOLS.md  app.py  app_mq.py  app_worker.py  build.cmd  build.sh  config.py  covid19python.toml  database.py  logfile1.txt  package-lock.json  package.json  pyproject.toml  requirements-freezed.txt  requirements-tools.txt  requirements.txt  run.sh  run_mq.sh  run_setup.sh  run_uml.sh  run_uml_gaphor.sh  run_web.sh  run_worker.sh  server.py  server_mq.py  services.py  setup.cfg  setup.py  start_server_mq.sh  tox.ini  view_admin.py  view_vaccination.py  (+5 more)
.run/: covid19.run.xml
app/: __init__.py
app/templates/: fragment_navbar.html  fragment_navtabs.html
app_worker/: __init__.py
covid19/: __init__.py  services.py  views.py  views_admin.py  views_europe.py  views_nrw.py  views_rki.py  views_vaccination.py  views_who.py
covid19/static/: index.js  package-lock.json  package.json  styles.css
covid19/templates/: page_home.html  page_layout.html
covid19_worker/: __init__.py
covid19python/: __init__.py  views.py
covid19python/templates/: fragment_navbar.html
covid19python_mq/: __init__.py
data/: RKI_COVID19_2020_02.csv  RKI_COVID19_2020_05.csv  RKI_COVID19__2021-01-28__landkreise.csv  RKI_COVID19__2021-01-29__bundeslaender.csv  RKI_COVID19__2021-01-30__bundeslaender.csv  RKI_COVID19__2021-02-06__bundeslaender.csv  RKI_COVID19__2021-02-06__landkreise.csv  RKI_COVID19__2021-02-07__bundeslaender.csv  RKI_COVID19__2021-02-07__landkreise.csv  RKI_COVID19__2021-02-09__landkreise.csv  RKI_COVID19__2021-02-18__landkreise.csv  RKI_COVID19__2021-02-18__landkreise____tmp.csv  RKI_COVID19__2021-03-09__bundeslaender.csv  RKI_COVID19__2021-04-01__bundeslaender.csv  RKI_COVID19__2021-04-03__bundeslaender.csv  WHO-COVID-19-global-data.csv  db_dump.sh  germany_vaccinations_timeseries_v2.tsv  split_rki.sh
data/db/: covid19data.sql  db_dump.sh  db_dump_reimport.sh
data/owid/: owid.sh
data/rki/: RKI_COVID19__2020-01.csv
data/rki_bundeslaender/: RKI_COVID19__2021-02-09__bundeslaender.csv  RKI_COVID19__2021-02-13__bundeslaender.csv  RKI_COVID19__2021-02-14__bundeslaender.csv  RKI_COVID19__2021-02-16__bundeslaender.csv  RKI_Corona_Bundeslaender.csv
data/rki_landkreise/: RKI_COVID19__2020-06.csv  RKI_COVID19__2020-07.csv  RKI_COVID19__2021-02-08__landkreise.csv  RKI_COVID19__2021-02-17__landkreise.csv  RKI_COVID19__2021-02-26__landkreise.csv  RKI_Corona_Landkreise.csv
docs/: BACKLOG.md  Domain_Model.md  UML_Blueprints.md  covid19python_url.gaphor
etc/: CHANGELOG.md  PYCURL_PROBLEM_WIN10.md  SQLITE_TO_MYSQL.md  SQLITE_TO_POSTGRESQL.md  TODO.md  deploy_db_to_r.sh  run.sh  run_setup.sh  setup.cmd  setup.sh  x.txt
requirements/: build.in  build.txt  dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
scripts/: scipt_get_python_requirements_from_txt.sh  script_get_python_requirements_from_txt.py  script_get_python_requirements_from_txt.sh  script_npm_install.py  script_setup_requirements.py
src/: app.py  config.py  database.py  helper.py  mq.py  package.json  run_mq.py
templates/: fragment_flashed_messages.html  fragment_navbar.html  fragment_navtabs.html  fragment_navtabs_admin.html  fragment_navtabs_europe.html  fragment_navtabs_nrw.html  fragment_navtabs_rki.html  fragment_navtabs_who.html  fragment_pagination.html  layout.html  page_home.html  page_layout.html
tests/: config.py  conftest.py  test_flaskr.py  test_mq.py  test_web.py  web.py
(+780 files in other folders)
