[build-system]
requires = [
  	"alembic==1.5.5",
	"appdirs==1.4.4",
	"argparse==1.4.0",
	"attrs==20.3.0",
	"bleach==3.3.0",
	"build==0.3.1.post1",
	"certifi==2020.12.5",
	"cffi==1.14.5",
	"cfgv==3.2.0",
	"chardet==3.0.4",
	"click==7.1.2",
	"colorama==0.4.4",
	"cryptography==3.4.7",
	"distlib==0.3.1",
	"docutils==0.17",
	"filelock==3.0.12",
	"greenlet==1.0.0",
	"identify==2.2.2",
	"idna==2.10",
	"importlib-metadata==3.10.0",
	"jeepney==0.6.0",
	"keyring==23.0.1",
	"mako==1.1.4",
	"markupsafe==1.1.1",
	"nodeenv==1.5.0",
	"packaging==20.9",
	"pbr==3.1.1",
	"pep517==0.10.0",
	"pip-licenses==3.3.0",
	"pip-tools==5.5.0",
	"pipenv==2020.11.15",
	"pkginfo==1.7.0",
	"pre-commit==2.10.1",
	"ptable==0.9.2",
	"py==1.10.0",
	"pyaml==20.4.0",
	"pycparser==2.20",
	"pygments==2.8.1",
	"pyparsing==2.4.7",
	"python-dateutil==2.8.1",
	"python-dotenv==0.15.0",
	"python-editor==1.0.4",
	"python-magic==0.4.22",
	"pytoolbox==14.0.0",
	"pytz==2020.5",
	"pyyaml==5.4.1",
	"readme-renderer==29.0",
	"requests-toolbelt==0.9.1",
	"requests==2.25.1",
	"rfc3986==1.4.0",
	"secretstorage==3.3.1",
	"six==1.15.0",
	"sqlalchemy==1.4.6",
	"toml==0.10.2",
	"tqdm==4.59.0",
	"twine==3.4.1",
	"urllib3==1.26.4",
	"venv-run==0.1.0",
	"virtualenv-clone==0.5.4",
	"virtualenv==20.4.3",
	"webencodings==0.5.1",
	"wheel==0.36.2",
	"zipp==3.4.1",
]
build-backend = "setuptools.build_meta"
