[metadata]
name = covid19python
version = 0.0.14

[options]
packages =
  covid19
  covid19_worker
install_requires =
  requests
  Flask >= 1.1.2
  Flask-SQLAlchemy == 2.4.4
  Flask-Cors == 3.0.10
  Flask-Login == 0.5.0
  SQLAlchemy >= 1.3.22
  psycopg2 >= 2.8.6
  wget >= 3.2
  celery[redis] >= 5.0.5
  npmdownloader == 1.2.1
  importlib; python_version >= "3.7"
