[metadata]
name = covid19python
version = 0.0.14

[options]
packages =
  covid19
  covid19_worker
install_requires =
  requests
  setuptools == 53.0.0
  pip == 21.0.1
  wheel == 0.36.2
  Flask >= 1.1.2
  Flask-SQLAlchemy == 2.4.4
  Flask-Cors == 3.0.10
  Flask-Login == 0.5.0
  SQLAlchemy >= 1.3.23
  psycopg2 >= 2.8.6
  wget >= 3.2
  celery[redis] >= 5.0.5
  npmdownloader == 1.2.1
  pyecharts == 1.9.0
  pyecharts-extras == 0.0.5
  tokenize-rt == 4.1.0
  numpy == 1.20.0
  pandas == 1.2.1
  gaphor == 2.2.1
  PyGObject == 3.38.0
  importlib; python_version >= "3.7"
