[metadata]
name = covid19python-thomaswoehlke
version = 0.0.19
url = https://github.com/thomaswoehlke/covid19python.git
author = Thomas Woehlke
author_email = thomas.woehlke@gmail.com
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    "Development Status :: 1 - Planning",
description = Covid19 Data Aggregation - also a Project to learn Python Flask, SQLAlchemy, Celery et al.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.
